# Aegis

./: .env.example  .gitignore  AGENT_SPECIFICATIONS.md  ARCHITECTURE.md  Anchor.toml  BLOCKCHAIN_SETUP.md  CHANGELOG.md  PROJECT_PROGRESS.md  README.md  SOLANA_SETUP_COMPLETE.md  package-lock.json  package.json
app/: layout.tsx
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_domain_models.py  20260618_1800_b650309b9e29_add_escrow_model.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py
backend/app/agents/argus/: __init__.py  agent.py
backend/app/agents/dike/: __init__.py  agent.py
backend/app/agents/kratos/: __init__.py  agent.py
backend/app/agents/themis/: __init__.py  agent.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  health.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  seed.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  agent_result.py  base.py  consensus_result.py  escrow.py  evidence.py  milestone.py  project.py  repository.py  reputation.py  user.py
backend/app/models/agent_result/: __init__.py
backend/app/models/base/: __init__.py
backend/app/models/consensus_result/: __init__.py  model.py
backend/app/models/evidence/: __init__.py  model.py
backend/app/models/milestone/: __init__.py  model.py
backend/app/models/project/: __init__.py  model.py
backend/app/models/repository/: __init__.py  model.py
backend/app/models/reputation/: __init__.py  model.py
backend/app/models/user/: __init__.py  model.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/shared/: __init__.py  database.py  dependencies.py
backend/tests/: test_agents.py  test_auth.py  test_health.py  test_models.py
docs/: README.md  (+1 more)
programs/aegis_protocol/: Cargo.toml
programs/aegis_protocol/src/: constants.rs  errors.rs  lib.rs  state.rs
(+27 files in other folders)
