[package]
name = "aegis-protocol"
version = "0.1.0"
description = "Aegis Protocol - Solana escrow smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
cpufeatures = "=0.2.12"


